// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calendar year is 2021, and quarters start on January 1st > CurrentQuarter 1`] = `
<div>
  <svg>
    <g
      class="current-quarter"
    >
      <path
        d="M0,-360A360,360,0,0,1,359.911,-8.004L79.98,-1.779A80,80,0,0,0,0,-80Z"
        fill="rgb(240, 228, 66)"
        stroke="white"
      />
    </g>
  </svg>
</div>
`;

exports[`calendar year is 2021, and quarters start on January 1st > Quarters 1`] = `
<div>
  <svg>
    <g
      class="quarters"
    >
      <path
        d="M0,-144A144,144,0,0,1,143.964,-3.202L79.98,-1.779A80,80,0,0,0,0,-80Z"
        fill="rgb(240, 228, 66)"
        stroke="white"
      />
      <path
        d="M143.964,-3.202A144,144,0,0,1,3.821,143.949L2.123,79.972A80,80,0,0,0,79.98,-1.779Z"
        fill="rgb(204, 121, 167)"
        stroke="white"
      />
      <path
        d="M3.821,143.949A144,144,0,0,1,-143.987,1.962L-79.993,1.09A80,80,0,0,0,2.123,79.972Z"
        fill="rgb(86, 180, 233)"
        stroke="white"
      />
      <path
        d="M-143.987,1.962A144,144,0,0,1,0,-144L0,-80A80,80,0,0,0,-79.993,1.09Z"
        fill="rgb(0, 158, 115)"
        stroke="white"
      />
    </g>
  </svg>
</div>
`;

exports[`calendar year is 2021, and quarters start on July 1st > CurrentQuarter 1`] = `
<div>
  <svg>
    <g
      class="current-quarter"
    >
      <path
        d="M0,-360A360,360,0,0,1,359.911,-8.004L79.98,-1.779A80,80,0,0,0,0,-80Z"
        fill="rgb(240, 228, 66)"
        stroke="white"
      />
    </g>
  </svg>
</div>
`;

exports[`calendar year is 2021, and quarters start on July 1st > Quarters 1`] = `
<div>
  <svg>
    <g
      class="quarters"
    >
      <path
        d="M0,-144A144,144,0,0,1,143.964,-3.202L79.98,-1.779A80,80,0,0,0,0,-80Z"
        fill="rgb(240, 228, 66)"
        stroke="white"
      />
      <path
        d="M143.964,-3.202A144,144,0,0,1,3.821,143.949L2.123,79.972A80,80,0,0,0,79.98,-1.779Z"
        fill="rgb(204, 121, 167)"
        stroke="white"
      />
      <path
        d="M3.821,143.949A144,144,0,0,1,-143.987,1.962L-79.993,1.09A80,80,0,0,0,2.123,79.972Z"
        fill="rgb(86, 180, 233)"
        stroke="white"
      />
      <path
        d="M-143.987,1.962A144,144,0,0,1,0,-144L0,-80A80,80,0,0,0,-79.993,1.09Z"
        fill="rgb(0, 158, 115)"
        stroke="white"
      />
    </g>
  </svg>
</div>
`;
